--- a/public/year/index.html
+++ b/public/year/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=59117&amp;path=livereload" data-no-instant defer></script>
     <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>Year – SDI</title>
 
-      <link rel="stylesheet" href="/css/main.min.73be4799b2091d293b47b52ca2642fe82aa2b1c9c050e8d1b389a80939a30dd4.css" integrity="sha256-c75HmbIJHSk7R7UsomQv6CqiscnAUOjRs4moCTmjDdQ=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
 
 
 
@@ -13,7 +13,7 @@
 <meta name="description" content="This is SDI site">
 <link rel="stylesheet" href="/css/style.css ">
 
-<link rel="alternate" type="application/rss+xml" href="https://andres3204.com/year/index.xml" title="Year - SDI">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:59117/year/index.xml" title="Year - SDI">
   </head>
   <body>
       <div class="container">
